upgrading record list fragment

--- a/Recorder_APP/app/src/main/res/layout/activity_login.xml
+++ b/Recorder_APP/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_email"
-                        android:inputType="textEmailAddress"
+                        android:inputType="phone"
                         android:maxLines="1"
                         android:singleLine="true" />
 
