--- a/Recorder_APP/app/src/main/res/layout/activity_login.xml
+++ b/Recorder_APP/app/src/main/res/layout/activity_login.xml
@@ -74,12 +74,21 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/email_sign_in_button"
+                android:id="@+id/email_sign_in_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_sign_in"
+                android:textStyle="bold" />
+                <Button
+                    android:id="@+id/register_button"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/action_sign_in"
+                    android:text="@string/action_register"
+                    android:background="@android:color/transparent"
                     android:textStyle="bold" />
 
             </LinearLayout>
