--- a/Recorder_APP/app/src/main/res/layout/app_bar_general.xml
+++ b/Recorder_APP/app/src/main/res/layout/app_bar_general.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.Toolbar
 
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,4 +9,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
+    android:fitsSystemWindows="true"
     app:popupTheme="@style/AppTheme.PopupOverlay" />
