加号对话框，打卡界面

--- a/Recorder_APP/app/src/main/res/layout/punch_card_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/punch_card_fragment.xml
@@ -9,6 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="auto_fit"
+        android:id="@+id/punch_card_main_habit_gridView"
+        android:layout_marginTop="30dp"
+        ></GridView>
+
     <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
