--- a/Recorder_APP/app/src/main/res/layout/item_friend_list_content.xml
+++ b/Recorder_APP/app/src/main/res/layout/item_friend_list_content.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="1">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
@@ -18,5 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/score"
+        android:layout_gravity="right"
+        android:textAppearance="?attr/textAppearanceListItem"/>
 
 </LinearLayout>
