--- a/Recorder_APP/app/src/main/res/layout/nav_header_main.xml
+++ b/Recorder_APP/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/header"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/nav_bg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
