--- a/Recorder_APP/app/src/main/res/layout/punch_card_main_habit_view.xml
+++ b/Recorder_APP/app/src/main/res/layout/punch_card_main_habit_view.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="180dp"
     android:layout_margin="8dp"
+    android:layout_marginBottom="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginTop="6dp"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="8dp"
     android:clickable="true"
@@ -12,39 +17,60 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="70dp"
+            android:layout_margin="6dp"
+            android:orientation="horizontal"
             android:layout_weight="3"
             >
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.6"
+                android:textSize="30dp"
+                android:text="fdsfas"
                 android:id="@+id/punch_card_main_habit_textView"
                 />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.4"
+                android:text="fdafew"
                 android:id="@+id/punch_card_main_habit_button_setting"
                 />
-        </LinearLayout>
 
-        <Button
+
+        </LinearLayout>
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:id="@+id/punch_card_main_habit_button_punch"
-            />
+            android:layout_height="70dp">
+            <com.dd.CircularProgressButton
+                android:id="@+id/punch_card_main_habit_button_punch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:textColor="#fff"
+                android:textSize="12sp"
+                app:cpb_cornerRadius="48dp"
+                app:cpb_colorIndicator="@color/positiveButton"
+                app:cpb_colorProgress="@color/circleBackground"
+                app:cpb_iconComplete="@drawable/ic_check_circle_white_24dp"
+                app:cpb_textError="Error"
+                app:cpb_textIdle="@strings/check" />/>
+
+        </FrameLayout>
+
+
+
 
 
     </LinearLayout>
