用户自定义习惯界面

--- a/Recorder_APP/app/src/main/res/layout/add_user_own_habit.xml
+++ b/Recorder_APP/app/src/main/res/layout/add_user_own_habit.xml
@@ -2,6 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:id="@+id/add_user_own_habit_imageView"
+        />
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_user_own_habit_EditText"
+        android:hint="Please Enter Your Habit Name"
+        />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_user_own_habit_spinner"
+       />
+
+
+    
 
 
 
