--- a/Recorder_APP/app/src/main/res/layout/item_friend_list.xml
+++ b/Recorder_APP/app/src/main/res/layout/item_friend_list.xml
@@ -8,6 +8,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:paddingLeft="@dimen/fab_margin"
+    android:paddingRight="@dimen/fab_margin"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.tongji.android.recorder_app.Activity.ItemListActivity"
     tools:listitem="@layout/item_friend_list_content" />
