--- a/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
@@ -36,21 +36,21 @@
                 android:layout_height="30dp"
                 android:inputType="numberSigned"
                 android:ems="10"
-                android:layout_weight="0.9"
                 android:hint="phone number to search"
                 android:textColor="#7b7b7b"
                 android:textColorHighlight="#a7a7a7"
                 android:background="@drawable/search_radious"
                 android:paddingLeft="10dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_weight="0.91" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:id="@+id/friend_search"
-                android:layout_weight="0.1"
                 android:textSize="15sp"
-                android:background="@android:drawable/ic_search_category_default" />
+                android:background="@drawable/search"
+                android:layout_weight="0.09" />
 
         </LinearLayout>
 
