--- a/Recorder_APP/app/src/main/res/values/dimens.xml
+++ b/Recorder_APP/app/src/main/res/values/dimens.xml
@@ -20,4 +20,10 @@
     <dimen name="mb_height_30">30dp</dimen>
     <dimen name="mb_height_8">8dp</dimen>
     <dimen name="mb_height_4">4dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
