edit existing habit

--- a/Recorder_APP/app/src/main/res/layout/punch_card_main_habit_view.xml
+++ b/Recorder_APP/app/src/main/res/layout/punch_card_main_habit_view.xml
@@ -44,6 +44,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
+                android:gravity="end|center_vertical"
                 android:text="fdafew"
                 android:id="@+id/punch_card_main_habit_button_setting"
                 />
