--- a/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
@@ -29,28 +29,41 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:background="@color/lightBackground">
-
-            <EditText
-                android:id="@+id/friend_number"
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:inputType="numberSigned"
-                android:ems="10"
-                android:layout_weight="0.9"
-                android:hint="phone number to search"
-                android:textColor="#7b7b7b"
-                android:textColorHighlight="#a7a7a7"
-                android:background="@drawable/search_radious"
-                android:paddingLeft="10dp"
-                android:textSize="15sp" />
+                android:layout_height="match_parent"
+                android:layout_weight="0.9">
+                <EditText
+                    android:id="@+id/friend_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:inputType="numberSigned"
+                    android:ems="10"
 
-            <Button
+                    android:hint="phone number to search"
+                    android:textColor="#7b7b7b"
+                    android:textColorHighlight="#a7a7a7"
+                    android:background="@drawable/search_radious"
+                    android:paddingLeft="10dp"
+                    android:textSize="15sp" />
+            </FrameLayout>
+
+
+            <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:id="@+id/friend_search"
-                android:layout_weight="0.1"
-                android:textSize="15sp"
-                android:background="@android:drawable/ic_search_category_default" />
+                android:layout_height="match_parent"
+                android:layout_weight="0.1">
+                <Button
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:id="@+id/friend_search"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:background="@drawable/ic_search_black_24dp" />
+            </FrameLayout>
+
+
 
         </LinearLayout>
 
