--- a/Recorder_APP/app/src/main/res/values/colors.xml
+++ b/Recorder_APP/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="holo_orange_light">#ffffbb33</color>
     <color name="holo_red_light">#ffff4444</color>
 
+    <color name="transparent">#00000000</color>
 </resources>
