load local contacts and add friends

--- a/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
+++ b/Recorder_APP/app/src/main/res/layout/friend_list_fragment.xml
@@ -68,6 +68,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/contactsView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+
+        <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
