--- a/Recorder_APP/app/src/main/res/layout/list_item_crime_parent.xml
+++ b/Recorder_APP/app/src/main/res/layout/list_item_crime_parent.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:textStyle="bold"
-        android:text="Crime Title" />
+        android:text="Contacts" />
 
     <ImageButton
         android:id="@+id/parent_list_item_expand_arrow"
