--- a/Recorder_APP/app/src/main/res/layout/punch_card_add_custom_dialog.xml
+++ b/Recorder_APP/app/src/main/res/layout/punch_card_add_custom_dialog.xml
@@ -5,15 +5,15 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose Your Habit"
+        android:layout_height="50dp"
+        android:text="Choose A New Habit"
         android:gravity="center"
         android:id="@+id/add_custom_dialog_imageView"
         android:textAllCaps="false"
-        android:background="#00aaff"
+        android:background="@color/colorPrimary"
         android:textColor="#ffffff"
 
-        />
+        android:textSize="22sp" />
 
     <GridView
         android:layout_width="match_parent"
@@ -23,8 +23,8 @@
         android:horizontalSpacing="1dp"
         android:id="@+id/add_custom_dialog_gridView"
         android:layout_below="@+id/add_custom_dialog_imageView"
-        android:background="#acacac"
-        />
+        android:background="#fcfcfc"
+        android:padding="10dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -45,6 +45,8 @@
         android:layout_below="@+id/add_custom_dialog_textView"
         android:id="@+id/add_custom_dialog_button"
         android:textAllCaps="false"
-        />
+        android:background="@drawable/buttton_radious"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
 </RelativeLayout>
