--- a/Recorder_APP/app/src/main/res/values/dimens.xml
+++ b/Recorder_APP/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="text_size">20dp</dimen>
-
+    <dimen name="mb_corner_radius_1">30dp</dimen>
     <dimen name="mb_corner_radius_2">2dp</dimen>
     <dimen name="mb_corner_radius_4">4dp</dimen>
     <dimen name="mb_width_100">100dp</dimen>
